--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
       <button class="btn-cart" type="button">Корзина</button>
     </header>
     <main>
-      <div class="products"></div>
+      <div class="goods-list"></div>
+      <a href="fastFood.html">FastFood</a>
     </main>
     <script src="js/main.js"></script>
   </body>
