--- a/index.html
+++ b/index.html
@@ -1,27 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shop</title>
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
-  <body>
-    <header>
-      <div class="logo">E-shop</div>
-      <button class="btn-cart" type="button">Корзина</button>
-    </header>
-    <main>
-      <div class="products"></div>
-      <!-- <a href="fastFood.html">FastFood</a> -->
-    </main>
+
+<head>
+    <meta charset="UTF-8">
+    <title>Интернет-магазин</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+    <div id="app">
+        <header>
+            <div class="logo">E-shop</div>
+            <div class="cart">
+                <form action="#" class="search-form">
+                    <input type="text" class="search-field" v-model="searchLine">
+                    <button class="btn-search" type="submit" @click="filter(searchLine)">
+                        <i class="fas fa-search"></i>
+                    </button>
+                </form>
+                <button class="btn-cart" type="button" @click="showCart()">Корзина</button>
+                <div class="cart-block" v-if="isVisibleCart != 0">
+                    <div class="cart-item" v-for="cartProd of cart" :data-id="cartProd.id_product">
+                        <div class="product-bio">
+                            <img :src="imgCatalog" alt="Some image">
+                            <div class="product-desc">
+                                <p class="product-title">{{cartProd.product_name}}</p>
+                                <p class="product-quantity">Quantity: {{cartProd.quantity}}</p>
+                                <p class="product-single-price">{{cartProd.price}}$ each</p>
+                            </div>
+                        </div>
+                        <div class="right-block">
+                            <p class="product-price">{{cartProd.quantity*cartProd.price}}$</p>
+                            <button class="del-btn" :data-id="cartProd.id_product" @click="delCartProduct(cartProd)">&times;</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <main>
+            <div class="products">
+                <div class="product-item" v-for="product of products" :data-id="product.id_product">
+                    <img :src="imgCatalog" alt="Some img">
+                    <div class="desc">
+                        <h3>{{product.product_name}}</h3>
+                        <p>{{product.price}} $</p>
+                        <button class="buy-btn" @click="addProduct(product)">Купить</button>
+                    </div>
+                </div>
+                <div v-if="productVisible == 0">Нет данных</div>
+            </div>
+        </main>
+    </div>
+    <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js"
+        integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="js/main.js"></script>
-    <script>
-      document.querySelector('.btn-cart').addEventListener('click', function (e) {
-        window.location.href='cart.html'
-      })
-      
-    </script>
-  </body>
+</body>
+
 </html>
+
+<!--<div class="cart-item" data-id="${this.id_product}">-->
+<!--<div class="product-bio">-->
+<!--<img :src="imgCatalog" alt="Some image">-->
+<!--<div class="product-desc">-->
+<!--<p class="product-title">${this.product_name}</p>-->
+<!--<p class="product-quantity">Quantity: ${this.quantity}</p>-->
+<!--<p class="product-single-price">$${this.price} each</p>-->
+<!--</div>-->
+<!--</div>-->
+<!--<div class="right-block">-->
+<!--<p class="product-price">${this.quantity*this.price}</p>-->
+<!--<button class="del-btn" data-id="${this.id_product}">&times;</button>-->
+<!--</div>-->
+<!--</div>-->
