--- a/index.html
+++ b/index.html
@@ -1,27 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shop</title>
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
-  <body>
-    <header>
-      <div class="logo">E-shop</div>
-      <button class="btn-cart" type="button">Корзина</button>
-    </header>
-    <main>
-      <div class="products"></div>
-      <!-- <a href="fastFood.html">FastFood</a> -->
-    </main>
+
+<head>
+    <meta charset="UTF-8">
+    <title>Интернет-магазин</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+    <div id="app">
+        <header>
+            <div class="logo">E-shop</div>
+            <div class="cart">
+                <!-- <form action="#" class="search-form" @submit.prevent="filter">
+                    <input type="text" class="search-field" v-model="userSearch">
+                    <button type="submit" class="btn-search">
+                        <i class="fas fa-search"></i>
+                    </button>
+                </form> -->
+                <myfilter></myfilter>
+                <button class="btn-cart" type="button" @click="showCart = !showCart">Корзина</button>
+
+                <cart :cart-items="cartItems" :img="imgCart" :visibility="showCart" @remove="remove"></cart>
+
+            </div>
+
+        </header>
+        <main>
+            <myerror></myerror>
+            <products :products="filtered" :img="imgProduct" @add-product="addProduct"></products>
+        </main>
+    </div>
+    <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js"
+        integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="js/ProductComponent.js"></script>
+    <script src="js/CartComponent.js"></script>
+    <script src="js/error.js"></script>
+    <script src="js/filter.js"></script>
     <script src="js/main.js"></script>
-    <script>
-      document.querySelector('.btn-cart').addEventListener('click', function (e) {
-        window.location.href='cart.html'
-      })
-      
-    </script>
-  </body>
+</body>
+
 </html>
